doc: Swagger product
